--- a/content/collections/blog/2021-12-23.livewire-admin-panel-lean-admin.md
+++ b/content/collections/blog/2021-12-23.livewire-admin-panel-lean-admin.md
@@ -2,7 +2,7 @@
 id: 51995c54-e46b-444d-be44-e483a02241d3
 blueprint: blog
 title: 'Livewire Admin Panel: Lean Admin'
-featured_image: 6g8ZuvV.png
+featured_image: blog/futured/6g8ZuvV.png
 blog_content:
   -
     type: paragraph
