--- a/content/collections/blog/2021-12-23.track-the-health-of-your-application-with-laravel-health.md
+++ b/content/collections/blog/2021-12-23.track-the-health-of-your-application-with-laravel-health.md
@@ -2,7 +2,7 @@
 id: 0d50cb21-fdd3-4a38-9eaf-d02551a486ff
 blueprint: blog
 title: 'Track the Health of Your Application With Laravel Health'
-featured_image: laravel-health-featured.png
+featured_image: blog/futured/laravel-health-featured.png
 blog_content:
   -
     type: paragraph
